alambert    2005/10/30 23:35:51 UTC	(20051030-3301)
  Log:
  CS COUNT: add AKICK; use switch instead of if

  Changes:	Modified:
  +22 -11	trunk/modules/chanserv/count.c (File Modified) 


jilles      2005/10/30 22:25:26 UTC	(20051030-3299)
  Log:
  Show all uplinks in /stats c (ircops only and no ips).
  

  Changes:	Modified:
  +9 -1		trunk/src/ptasks.c (File Modified) 


alambert    2005/10/30 21:54:45 UTC	(20051030-3297)
  Log:
  XMLRPC: rename register_account to account.register; same with verify_account

  Changes:	Modified:
  +8 -8		trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/10/30 21:51:26 UTC	(20051030-3295)
  Log:
  atheme.account.set_metadata: add length checking

  Changes:	Modified:
  +2 -1		trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/10/30 21:25:29 UTC	(20051030-3293)
  Log:
  SET PROPERTY: fix off-by-one in mdlimit

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/set.c (File Modified) 
  +1 -1		trunk/modules/nickserv/set.c (File Modified) 


alambert    2005/10/30 21:23:32 UTC	(20051030-3291)
  Log:
  XMLRPC atheme.account.set_metadata: don't let users set metadata with keys containing ':'; enforce metadata limit.

  Changes:	Modified:
  +14 -0	trunk/modules/xmlrpc/account.c (File Modified) 


jilles      2005/10/30 20:37:14 UTC	(20051030-3289)
  Log:
  Change handling of the snoop channel. Join it with all
  services when it's created on the ircd side, and also
  with newly added services. Make changing general::chan
  and rehashing work.
  

  Changes:	Modified:
  +2 -0		trunk/include/extern.h (File Modified) 
  +20 -4	trunk/src/conf.c (File Modified) 
  +3 -0		trunk/src/node.c (File Modified) 
  +45 -2	trunk/src/services.c (File Modified) 
  +5 -0		trunk/src/servtree.c (File Modified) 


alambert    2005/10/30 07:48:59 UTC	(20051030-3287)
  Log:
  add note to gen_pw() reminding users to free()

  Changes:	Modified:
  +3 -0		trunk/src/function.c (File Modified) 

